work on authentication

--- a/BulkyBookWeb/Views/Category/Index.cshtml
+++ b/BulkyBookWeb/Views/Category/Index.cshtml
@@ -21,7 +21,7 @@
         <tr>
             <th>Id</th>
             <th>Category Name</th>
-            <th>Display Order</th>
+            <th>Category</th>
             <th>DateCreated</th>
             <th></th>
         </tr>
