--- a/BulkyBookWeb/Views/Home/Index.cshtml
+++ b/BulkyBookWeb/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome To My Contact App</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Easily manage and organize your contacts</a>.</p>
 </div>
